[package]
name = "rock-paper-scissors-minus-one"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.14.0"
colored = "3.0.0"


[package.metadata.bundle]
name = "RockPaperScissorsMinusOne"
identifier = "com.maximnota.myapp"
